--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soprano Clinic</title>
-</head>
-<body>
-    <header>
-        <h1>Welcome to Soprano Clinic</h1>
-    </header>
-    <main>
-        <!-- Main content goes here -->
-    </main>
-    <footer>
-        <p>&copy; 2024 Soprano Clinic. All rights reserved.</p>
-    </footer>
-</body>
+<html lang="uk">
+  <head>
+    @include('partials/head.html')
+  </head>
+
+  <body>
+    <main>@include('partials/hero.html')</main>
+  </body>
 </html>
